# decaf-rust

./: Cargo.toml  README.org  grammar  nextstep  test.sh
examples/: arr.decaf  array.decaf  calc.decaf  cars.decaf  dstowell.decaf  hashtable.decaf  hello.decaf  helloworld.decaf  pascal.decaf  protect.decaf  pwoo.decaf  short.decaf
src/: algo  ast.rs  builtin.rs  codegen.rs  decaf.rs  derivative.rs  dfa.rs  lexer.rs  lib.rs  lnp.rs  main.rs  regex.rs  shell.rs  test.rs  treebuild.rs  viz.rs  walk.rs
