[package]
name = "decaf"
version = "0.1.0"
authors = ["Xiaoting Tang <xttjsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "decaf"
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "decaf-main"
path = "src/main.rs"

[dependencies]
proc-macro2 = { version = "0.4.3", features = ["nightly"] }
syn = { version = "0.15.36", features = ["extra-traits", "full"] }
quote = "0.6.0"
dot = "0.1.4"
