[package]
name = "decaf"
version = "0.1.0"
authors = ["Xiaoting Tang <xttjsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "decaf"
proc-macro = true
path = "src/lib.rs"

[dependencies]
plex = "0.2.5"
llvm-sys = "80"
libc = "0.2.66"